# macula-greek

./: .gitignore  DEVELOPMENT-GUIDE.md  LICENSE.md  README.md  UNIT-TEST.md  fix_o2_to_oc.py  key.pub  key.pub.pub  mkdocs.yml  transform-to-lowfat.sh  verify_oc_fix.py
.github/workflows/: pr.yml
Nestle1904/: 1904-nodes-vref.tsv
Nestle1904/TSV/: README.md  greek-lowfat-to-tsv.xq
Nestle1904/lowfat/: 02-mark.xml  06-romans.xml  07-1corinthians.xml  08-2corinthians.xml  09-galatians.xml  10-ephesians.xml  11-philippians.xml  12-colossians.xml  13-1thessalonians.xml  14-2thessalonians.xml  15-1timothy.xml  16-2timothy.xml  17-titus.xml  18-philemon.xml  19-hebrews.xml  20-james.xml  21-1peter.xml  22-2peter.xml  23-1john.xml  24-2john.xml  25-3john.xml  26-jude.xml  27-revelation.xml  boxwood.css  commonformat.xml  nestle1904lowfat.xml  treedown.css
Nestle1904/nodes/: 06-romans.xml  07-1corinthians.xml  08-2corinthians.xml  09-galatians.xml  10-ephesians.xml  11-philippians.xml  12-colossians.xml  13-1thessalonians.xml  14-2thessalonians.xml  15-1timothy.xml  16-2timothy.xml  17-titus.xml  18-philemon.xml  19-hebrews.xml  20-james.xml  21-1peter.xml  22-2peter.xml  23-1john.xml  24-2john.xml  25-3john.xml  26-jude.xml  oc-o2-by-verb.xquery
Nestle1904/tsv/: README.md
SBLGNT/: README.md  sblgnt-nodes-vref.tsv
doc/: Nestle1904Treebanks.doc  index.md  semantics.md
mappings/: add-usfm-refs-to-nodes.xsl  add-usfm-refs-to-tei.xsl  add-xmlid-to-tei.xsl  greek-lowfat-to-tsv.xq  lowfat-macula-greek.xquery  opentext2lowfat.xsl  precis-nodes.xquery  precis.xquery  shorten-domain-attributes.xsl
pipelines/tei-transform/: README.md  main.py  pyproject.toml
pipelines/tei-transform/fixtures/: bible-books-lookup.json  sblgnt-tei.xsl
test/: __init__.py  conftest.py  pyproject.toml  test_consistency.py  test_lowfat.py  test_nestle1904_lowfat.py  test_nestle1904_nodes.py  test_nodes.py  test_sblgnt_lowfat.py  test_sblgnt_tei.py  test_sources.py  test_tei.py  test_tsv.py
test/sources/Clear/: test_synonyms.py  test_wordsense.py
(+189 files in other folders)
