[tool.poetry]
name = "macula-greek"
version = "0.1.0"
description = "Syntax trees, morphology, and linguistic annotations for the Greek Bible"
authors = ["Mike Brinker <mike.brinker@clear.bible>"]
license = "CC BY 4.0"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocstrings = "^0.19.0"

[tool.poetry.dev-dependencies]
lxml = "^4.9.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
